# Rust-undetected-chromedriver

./: Cargo.toml  shell.nix
src/: chrome_api.rs  google_api.rs  lib.rs
tests/: chrome.rs  headless.rs  recaptcha.rs
